[package]
name = "sandy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.90"
rand = {version = "0.8.5", features = [ "small_rng" ]}
cfg-if = "0.1.7"

console_error_panic_hook = { version = "0.1.6", optional = true }


[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = true

[dependencies.getrandom]
features = [
    "js",
]